# mainstreet-capital-access-atlas

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: accessibility.yml  data-issue.yml  methodology-feedback.yml  source-request.yml  state-spotlight.yml
.github/workflows/: ci.yml  deploy-pages.yml  refresh-data.yml
data/manual/: README.md
data/public/: counties.csv  data_dictionary.csv  data_package_manifest.json
docs/: accessibility.md  attribution.md  data_sources.md  definition_of_done_audit.md  design-direction.md  generated_artifacts.md  limitations.md  linkedin_launch_post.md  methodology.md  product-thesis.md  release_checklist.md
site/templates/: 404.html  accessibility.html  base.html  contribute.html  county.html  illinois.html  index.html  limitations.html  methodology.html  sources.html
src/mainstreet_atlas/: __init__.py  cli.py  config.py  constants.py  paths.py  (+2 more)
tests/: test_bls_laus.py  test_briefs.py  test_cdfi.py  test_census_acs.py  test_census_cbp.py  test_census_popest.py  test_census_saipe.py  test_config.py  test_data_dictionary.py  test_data_package.py  test_fdic.py  test_ffiec_cra.py  test_fips.py  test_hud.py  test_language.py  test_manual_imports.py  test_normalization.py  test_public_output_quality.py  test_sba.py  test_schemas.py  test_scoring.py  test_site_discovery.py  test_static_accessibility.py  test_static_site_links.py
(+29 files in other folders)
